Use a copy of OWB's unsafe class to workaround proxy creation