@@ -123,6 +123,9 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.3</version>
+        <configuration>
+          <argLine>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
